[metadata]
name = PyLinuxDiagnosticToolKit
version = 1.0
author = Ryan Henrichson
author_email = orcephrye@gmail.com
description = A Python library that supports accessing and running commands on remote Linux devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/orcephrye/PyMultiprocessTools
classifiers =
    Programming Language :: Python :: 3
    License :: GNU GENERAL PUBLIC LICENSE v3
    Operating System :: Linux

[options]
packages = find:
python_requires = >=3.8
install_requires =
    paramiko >= 2.7.2
    PyMultiprocessTools @ git+git://github.com:orcephrye/PyMultiprocessTools@master#egg=PyMultiprocessTools
    PyCustomParsers @ git+git://github.com/orcephrye/PyCustomParsers@master#egg=PyCustomParsers
    PyCustomCollections @ git+git://github.com/orcephrye/PyCustomCollections@master#egg=PyCustomCollections
