[metadata]
name = PyLinuxDiagnosticToolKit
version = 1.0
author = Ryan Henrichson
author_email = orcephrye@gmail.com
description = A Python library that supports accessing and running commands on remote Linux devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/orcephrye/PyMultiprocessTools
classifiers =
    Programming Language :: Python :: 3
    License :: GNU GENERAL PUBLIC LICENSE v3
    Operating System :: Linux

[options]
packages = find:
python_requires = >=3.8
install_requires =
    paramiko >= 2.7.2
    pytz     >= 2021.3
    PyMultiTasking @ git+http://github.com/orcephrye/PyMultiTasking.git#egg=PyMultiTasking
    PyCustomParsers @ git+http://github.com/orcephrye/PyCustomParsers.git#egg=PyCustomParsers
    PyCustomCollections @ git+http://github.com/orcephrye/PyCustomCollections.git#egg=PyCustomCollections
